--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@angular/router": "^12.2.16",
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@nebular/auth": "8.0.0",
+    "@nebular/date-fns": "^9.1.0-rc.2",
     "@nebular/eva-icons": "8.0.0",
+    "@nebular/moment": "^9.1.0-rc.2",
     "@nebular/security": "8.0.0",
     "@nebular/theme": "8.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
@@ -51,6 +53,7 @@
     "chart.js": "2.7.1",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "date-fns": "^2.29.2",
     "echarts": "^4.9.0",
     "eva-icons": "^1.1.3",
     "intl": "1.2.5",
