--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "conventional-changelog": "conventional-changelog",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "npm run build -- --configuration production --aot  --base-href https://alexandrebqueiroz.github.io/fii-web/",
+    "build:prod": "npm run build -- --configuration production --aot  --base-href https://alexandrebqueiroz.github.io/intercept-web-app/",
     "test": "ng test",
     "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
     "lint": "ng lint",
