--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points --tsconfig \"./src/tsconfig.app.json\""
   },
   "dependencies": {
+    "@angular-devkit/core": "^14.2.2",
+    "@angular-devkit/schematics": "^14.2.2",
     "@angular/animations": "^12.2.16",
     "@angular/cdk": "12.1.0",
     "@angular/common": "^12.2.16",
@@ -39,6 +41,7 @@
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
+    "@angular/service-worker": "^12.2.16",
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@nebular/auth": "8.0.0",
     "@nebular/date-fns": "^9.1.0-rc.2",
@@ -46,6 +49,7 @@
     "@nebular/moment": "^9.1.0-rc.2",
     "@nebular/security": "8.0.0",
     "@nebular/theme": "8.0.0",
+    "@schematics/angular": "^14.2.2",
     "@swimlane/ngx-charts": "^14.0.0",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
@@ -80,6 +84,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.1.4",
+    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/eslint-plugin": "12.7.0",
+    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "^12.2.17",
     "@angular/compiler-cli": "^12.2.16",
     "@angular/language-service": "12.1.0",
@@ -90,8 +99,11 @@
     "@types/jasminewd2": "2.0.3",
     "@types/leaflet": "1.2.3",
     "@types/node": "^12.12.70",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
     "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "1.3.4",
+    "eslint": "^7.26.0",
     "husky": "0.13.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
