--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "date-fns": "^2.29.2",
     "echarts": "^4.9.0",
     "eva-icons": "^1.1.3",
+    "hammerjs": "^2.0.8",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
